# MIDI.ai

./: .gitignore  Dockerfile  README.md  audio_pipeline.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: analysis.py  config.py  exceptions.py  identification.py  logging_config.py  pipeline.py  postprocessing.py  separation.py  transcription.py  utils.py
tests/: test_analysis.py  test_identification.py  test_postprocessing.py  test_utils.py
